mobile layout bug correction

--- a/docs/css/debug/style.css
+++ b/docs/css/debug/style.css
@@ -949,6 +949,7 @@ html {
   min-height: 100vh;
   width: 100%;
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
@@ -1457,6 +1458,7 @@ body {
   position: relative;
   box-sizing: content-box;
   height: 534px;
+  overflow-x: hidden;
 }
 
 @media only screen and (min-width: 577px) {
